--- a/HW2/hw2_starter-1.html
+++ b/HW2/hw2_starter-1.html
@@ -1778,6 +1778,7 @@ Paste the link to your GitHub repo below.</p>
 <p>Note that in order to earn full credits, your GitHub repo commit
 history should show at least two commits.</p>
 <p>Paste your link here…</p>
+<p><a href="https://github.com/wmokumass/repohw2" class="uri">https://github.com/wmokumass/repohw2</a></p>
 </div>
 
 
